--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <table cellspacing="20">
         <tr>
             <td>
-                <img src="https://github.com/mariaakemi/cv/blob/main/universe.jpg.png?raw=true" alt="universe picture" width="260">
+                <img src="universe.jpg.png" alt="universe picture" width="260">
             </td>
             <td>
                 <h1>Maria Eduarda Akemi</h1>
