--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
         <tbody>
             <tr>
                 <td>2010-2013</td>
-                <td>Leader Developer at Amazon</td>
+                <td>Leader Developer at</td>
             </tr>
             <tr>
                 <td>2010</td>
-                <td>Researcher at USP</td>
+                <td>Researcher at</td>
             </tr>
         </tbody>
     </table>
